# nihonsub

./: .env.example  .gitignore  AGENTS.md  README.md  opencode.json  pyproject.toml
.opencode/plans/: merge-and-tag.md  refactor-code-cleanup.md
docs/: architecture.md  configuration.md  development.md  index.md  lessons-learned.md  usage.md  voicemeeter.md
docs/features/: file-transcribe.md  live-listen.md  windows-support.md
docs/plans/: packaging.md
docs/releases/: v0.1.md  v0.2.md  v0.3.md
src/: __main__.py  config.py
src/audio/: capture.py  extractor.py  processor.py
src/models/: schemas.py
src/subtitle/: generator.py
src/transcription/: display.py  engine.py  segmenter.py  stream.py
src/ui/: gtk_window.py
tests/: test_gtk_window.py
