[project]
name = "nihonsub"
version = "0.1.0"
description = "Japanese audio transcription to subtitle files"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.1.0",
    "silero-vad>=4.0.0",
    "ffmpeg-python>=0.2.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fire>=0.7.0",
    "rich>=13.0.0",
]

[project.scripts]
nihonsub = "src.__main__:main"
